Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-13054

[REG 3.2.1 -> 3.3.0] Crash when closing Options dialog after downloading syntax definition

XMLWordPrintable

      1. Create a new text file.
      2. Close the file.
      3. Go to "Tools" -> "Options..." -> "Text Editor" -> "Generic Hightlighter".
      4. Click "Download Definitions..."
      5. Select a line and click "Download Selected Definitions".
        The dialog closes itself.
      6. Click "OK":
        Creator crashes:
        0	QSharedPointer<TextEditor::BaseTextDocument>::data	qsharedpointer_impl.h	304	0x7fff630ea30e	
        1	TextEditor::BaseTextEditorWidget::textDocument	basetexteditor.cpp	1002	0x7fff630bdb84	
        2	operator()	basetexteditor.cpp	7159	0x7fff630e0d6c	
        3	QtPrivate::FunctorCall<QtPrivate::IndexesList<>, QtPrivate::List<>, void, TextEditor::BaseTextEditorWidget::setupAsPlainEditor()::<lambda()>>::call(struct {...}, void **)	qobjectdefs_impl.h	502	0x7fff630e4334	
        4	QtPrivate::Functor<TextEditor::BaseTextEditorWidget::setupAsPlainEditor()::<lambda()>, 0>::call<QtPrivate::List<>, void>(struct {...} &, void *, void **)	qobjectdefs_impl.h	559	0x7fff630e40b4	
        5	QtPrivate::QFunctorSlotObject<TextEditor::BaseTextEditorWidget::setupAsPlainEditor()::<lambda()>, 0, QtPrivate::List<>, void>::impl(int, QtPrivate::QSlotObjectBase *, QObject *, void **, bool *)	qobject_impl.h	200	0x7fff630e3ae7	
        6	QtPrivate::QSlotObjectBase::call	qobject_impl.h	132	0x7ffff6935dab	
        7	QMetaObject::activate	qobject.cpp	3667	0x7ffff6932e05	
        8	QMetaObject::activate	qobject.cpp	3547	0x7ffff6932828	
        9	TextEditor::Internal::Manager::mimeTypesRegistered	moc_manager.cpp	169	0x7fff631df025	
        10	TextEditor::Internal::Manager::registerMimeTypesFinished	manager.cpp	369	0x7fff6316c2a3	
        11	TextEditor::Internal::Manager::qt_static_metacall	moc_manager.cpp	101	0x7fff631dedf0	
        12	QMetaObject::activate	qobject.cpp	3681	0x7ffff6932f06	
        13	QMetaObject::activate	qobject.cpp	3547	0x7ffff6932828	
        14	QFutureWatcherBase::finished	moc_qfuturewatcher.cpp	255	0x7ffff69bfb31	
        15	QFutureWatcherBasePrivate::sendCallOutEvent	qfuturewatcher.cpp	444	0x7ffff666eb6b	
        16	QFutureWatcherBase::event	qfuturewatcher.cpp	346	0x7ffff666e501	
        17	QApplicationPrivate::notify_helper	qapplication.cpp	3499	0x7ffff732a9b8	
        18	QApplication::notify	qapplication.cpp	2952	0x7ffff7328191	
        19	QCoreApplication::notifyInternal	qcoreapplication.cpp	935	0x7ffff68efc82	
        20	QCoreApplication::sendEvent	qcoreapplication.h	237	0x7ffff68f3a2d	
        ...	<Mehr>				
        

      The crash was found using Squish test tst_generic_highlighter and can be reproduced and tested by this.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            hjk hjk
            rlohning Robert Löhning
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes