TextEditor: Make sure "global" connections are properly destroyed

Task-number: QTCREATORBUG-13054
Change-Id: I32234836dc893075978dbc5fe43d696bc0f228f4
Reviewed-by: Robert Loehning <robert.loehning@digia.com>
Reviewed-by: hjk <hjk121@nokiamail.com>